--- a/src/styles/_searchContainer.scss
+++ b/src/styles/_searchContainer.scss
@@ -3,6 +3,8 @@
     height: 6.25vh;
     background-color: white;
     display: flex;
+    box-shadow: none;
+    border: 0.2rem solid #d3d3d3;
     input{
         padding: 0 2vw;
     }
